Adds a basic history view (try)

--- a/MoinMoin/themes/basic/static/css/common.css
+++ b/MoinMoin/themes/basic/static/css/common.css
@@ -6,6 +6,12 @@ html{
   border-color: rgba(82, 168, 236, 0.8);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 4px rgba(82, 168, 236, 0.6);
 }
+.moin-hist-rev {
+	text-align: center;
+}
+#moin-button-diff {
+	text-align: center;
+}
 .sidebar-nav {
   padding: 9px 0;
 }
