--- a/MoinMoin/templates/base.html
+++ b/MoinMoin/templates/base.html
@@ -43,7 +43,7 @@
     {% block head_links %}
 
     {% block bootstrap_stylesheet %}
-    <link rel="stylesheet" href="{{ url_for('serve.files', name='bootstrap', filename='bootstrap/css/bootstrap.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('serve.files', name='bootstrap', filename='css/bootstrap.css') }}" />
     {% endblock %}
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='logos/favicon.ico') }}" />
