--- a/MoinMoin/themes/basic/templates/modify.html
+++ b/MoinMoin/themes/basic/templates/modify.html
@@ -21,45 +21,48 @@
        For *Draw content, hide submit button and form['comment'], since *Draw
        POSTs originate from their respective applets.
     #}
-    <div class="tabbable tabs-right">
-        <ul class="nav nav-tabs">
-            <li class="active"><a href="#editor" data-toggle="tab">Edit Content</a></li>
-            <li><a href="#meta" data-toggle="tab">Edit Meta</a></li>
-            <li><a href="#help" data-toggle="tab">Help</a></li>
-        </ul>    
-        <div class="tab-content">
-            <div class="tab-pane active" id="editor">
-                {{ basic_data_editor(form['content_form'], item_name, class='input-block-level') }}
-            </div>
-            <div class="tab-pane active" id="meta">
-                <div class="row-fluid">
-                    <div class="span6">
-                        {{ basic_meta_editor(form['meta_form']) }}
-                    </div>
-                    {% set field = form['extra_meta_text'] %}
-                    <div class="span6">
+    <ul class="moin-nav nav-tabs">
+        <li class="active"><a href="#editor" data-toggle="tab">Edit Content</a></li>
+        <li><a href="#meta" data-toggle="tab">Edit Meta</a></li>
+        <li><a href="#help" data-toggle="tab">Help</a></li>
+    </ul>    
+    <div class="tab-content">
+        <div class="tab-pane active" id="editor">
+            {{ basic_data_editor(form['content_form'], item_name, class='form-control') }}
+        </div>
+        <div class="tab-pane active" id="meta">
+            <div class="row">
+                <div class="col-lg-6">
+                    {{ basic_meta_editor(form['meta_form']) }}
+                </div>
+                {% set field = form['extra_meta_text'] %}
+                <div class="col-lg-6">
+                    <div class="form-group">
                         {{ gen.label(field) }}
-                        {{ gen.textarea(field, rows=field.properties.rows|string, cols=field.properties.cols|string, class='span11') }}
+                        {{ gen.textarea(field, rows=field.properties.rows|string, cols=field.properties.cols|string, class='form-control') }}
                     </div>
                 </div>
             </div>
-            <div class="tab-pane active" id="help">
-                {% if form['content_form'].help %}
-                    <pre id="moin-editor-help">{{ form['content_form'].help }}</pre>
-                {% endif %}
-            </div>
         </div>
-    </div> <!-- left tabbable -->
+        <div class="tab-pane active" id="help">
+            {% if form['content_form'].help %}
+                <pre id="moin-editor-help">{{ form['content_form'].help }}</pre>
+            {% endif %}
+        </div>
+    </div>
     {#
     {{ gen.textarea(form['meta_text'], lang='en', dir='ltr', rows=rows_meta, cols=cols) }}
     <br />
     {{ forms.render_errors(form['meta_text']) }}
     #}
-    <br />                
     {% if not form['content_form'].is_draw %}
+    <div class="form-group">
         {{ forms.render_textcha(gen, form) }}
-        {{ gen.input(form['comment'], type="text", class="input-block-level") }}
+        {{ gen.input(form['comment'], type="text", class="form-control") }}
+    </div>
+    <div class="form-group">
         {{ forms.render_submit(form, value='Save', class='btn btn-primary', id='moin-save-text-button') }}
+    </div>
     {% endif %}
 
     {{ gen.form.close() }}
