--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -13,3 +13,11 @@
   .nav;
   margin-bottom: 20px;  // override bottom-margin nav-tabs
 }
+
+.moin-shadow {
+  > li {
+    > a {
+      .form-control-focus(); // adds shadow onfocus
+    }
+  }
+}
