Fixes #22, nonexistent links are now different than valid links

--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4314,3 +4314,9 @@ td.visible-print {
 .moin-location-breadcrumb {
   padding-top: 12px;
 }
+.moin-nonexistent {
+  color: #e7908e;
+}
+.moin-nonexistent:hover {
+  color: #d9534f;
+}
