--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -25,3 +25,10 @@
 .moin-location-breadcrumb {
   padding-top: 12px;
 }
+
+.moin-nonexistent {
+  color: @link-nonexistent-color;
+  &:hover {
+    color: @link-nonexistent-hover-color;
+  }
+}
