--- a/MoinMoin/themes/basic/static/custom-less/variables.less
+++ b/MoinMoin/themes/basic/static/custom-less/variables.less
@@ -35,6 +35,8 @@
 
 @link-color:            @brand-primary;
 @link-hover-color:      darken(@link-color, 15%);
+@link-nonexistent-color: lighten(@brand-danger, 15%);
+@link-nonexistent-hover-color: @brand-danger;
 
 // Typography
 // -------------------------
