adds moin-sidebar class, fixes #10 by using the shorten_item_name filter

--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4320,3 +4320,8 @@ td.visible-print {
 .moin-nonexistent:hover {
   color: #d9534f;
 }
+.moin-sidebar {
+  margin-bottom: 20px;
+  padding-left: 0;
+  overflow: hidden;
+}
