--- a/MoinMoin/themes/basic/templates/itemviews.html
+++ b/MoinMoin/themes/basic/templates/itemviews.html
@@ -11,9 +11,7 @@
                'special.transclusions' : "icon-edit",
            } %}
 
-{% set navtabs = ['frontend.show_item', 'frontend.modify_item', 'frontend.history',
-                  'frontend.show_item_meta', 'frontend.highlight_item', 'frontend.backrefs',
-                  'special.comments', 'special.transclusions',] %}
+{% set navtabs = theme_supp.get_action_tabs(item_name) %}
 
 {% block views %}
 
@@ -21,15 +19,7 @@
         {%- for endpoint, label, title, check_exists in cfg.item_views if not endpoint in cfg.endpoints_excluded %}
             {%- if not check_exists or check_exists and exists %}
 
-                {%- if endpoint == 'frontend.modify_item' and user.may.write(item_name) %}
-                    <li {% if endpoint == current_endpoint %} class="active"{% endif %}>
-                        <a href="{{ url_for(endpoint, item_name=item_name) }}" title="{{ title }}" rel="nofollow">
-                         <span class={{icon[endpoint]}}></span>   
-                            {{ label }}
-                        </a>
-                    </li>
-
-                {%- elif endpoint == 'special.comments' %}
+                {%- if endpoint == 'special.comments' %}
                     <li class="moin-toggle-comments-button">
                         <a href="#" title="{{ title }}">
                         <span class={{icon[endpoint]}}></span>
