--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -16,7 +16,7 @@
 
 {% block layout %}
 	<div class="container">
-        <div class="navbar navbar-inverse">
+        <div class="navbar moin-navbar-inverse">
             {% if logo %}
             <a class="navbar-brand" href="{{ url_for('frontend.show_item', item_name=cfg.item_root) }}">
                 <img class="img-circle" src="{{ '/static/logos/moinmoin-small.png' }}"/>
